[tool.poetry]
name = "geneagrapher-core"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["David Alber <alber.david@gmail.com>"]
readme = "README.md"
repository = "https://github.com/davidalber/geneagrapher-core"
packages = [{include = "geneagrapher_core"}]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.11.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
