[tool.poetry]
name = "geneagrapher-core"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["David Alber <alber.david@gmail.com>"]
readme = "README.md"
repository = "https://github.com/davidalber/geneagrapher-core"
packages = [{include = "geneagrapher_core"}]

[tool.poetry.dependencies]
python = "^3.8.1"
beautifulsoup4 = "^4.11.1"
types-beautifulsoup4 = "^4.11.6.4"
tomli = { version = "^2.0.1", python = "<3.11" }
aiohttp = "^3.8.3"
aiodns = "^3.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
mypy = "^0.991"
flake8 = "^6.0.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
