[tool.poetry]
name = "geneagrapher-core"
version = "0.1.3"
description = "Functions for getting records and building graphs from the Math Genealogy Project."
license = "MIT"
authors = ["David Alber <alber.david@gmail.com>"]
readme = "README.md"
repository = "https://github.com/davidalber/geneagrapher-core"
packages = [{include = "geneagrapher_core"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"
types-beautifulsoup4 = "^4.11.6.4"
aiohttp = "^3.9.3"
aiodns = "^3.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
mypy = "^0.991"
flake8 = "^6.0.0"
pytest-asyncio = "^0.20.3"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
redis = "^4.6.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-autodoc-typehints = "^1.22"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "live: tests that request live data from the Math Genealogy Project",
]
